# rhino3dm

./: .gitignore  setup.py
src/bindings/: bindings.cpp  bindings.h  bnd_object.cpp  bnd_rhinosdkdoc.cpp  bnd_rhinosdkdoc.h
src/js/: rhino3dm.d.ts
src/rhinocore_bindings/: CMakeLists.txt  readme.md  stdafx.cpp  stdafx.h
src/rhinocore_bindings/PropertySheets/: Rhino.Common.props  Rhino.Cpp.Common.props  Rhino.Cpp.PlugIn.props  Rhino.Cpp.PlugInComponent.props
src/rhinocore_bindings/PropertySheets/BuildConfigurations/: Rhino.Cpp.x64.Debug.PlugIn.props  Rhino.Cpp.x64.Debug.PlugInComponent.props  Rhino.Cpp.x64.Debug.props  Rhino.Cpp.x64.DebugRhino.PlugIn.props  Rhino.Cpp.x64.DebugRhino.PlugInComponent.props  Rhino.Cpp.x64.DebugRhino.props  Rhino.Cpp.x64.Release.PlugIn.props  Rhino.Cpp.x64.Release.PlugInComponent.props  Rhino.Cpp.x64.Release.props
